# HMTG

./: .gitattributes  .gitignore  Crash_115975812.dmp  README.md  agconnect-services.json  build-output.txt  build-profile.json5  oh-package-lock.json5  oh-package.json5  package-lock.json
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  oh-package-lock.json5  oh-package.json5
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp
entry/src/main/cpp/tdlib/api/: TDLibApi.cpp  TDLibApi.h
entry/src/main/cpp/tdlib/config/: ConfigManager.cpp  ConfigManager.h
entry/src/main/cpp/tdlib/core/: StateMonitor.cpp  StateMonitor.h  TDLibClient.cpp  TDLibClient.h  TDLibCore.cpp  TDLibCore.h
entry/src/main/cpp/tdlib/napi/: NAPIBinder.cpp  NAPIBinder.h
entry/src/main/cpp/tdlib/utils/: JsonHelper.h
entry/src/main/cpp/types/libhome/: Index.d.ts  oh-package.json5
entry/src/main/cpp/utils/: ErrorHandler.h  JsonHelper.h  Logger.h
entry/src/main/ets/bindings/: libhome.d.ts
entry/src/main/ets/components/: index.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/models/: TDLibData.ets  index.ets
entry/src/main/ets/pages/: BotTokenPage.ets  ChatListPage.ets  ChatPage.ets  (+8 more)
entry/src/mock/: Libhome.mock.ets  mock-config.json5
entry/src/test/: ResourceHelper.test.ets
entry/src/test/ets/: TDLibService.test.ets  TdlibWorker.test.ets
storage_cache/: Index.ets  build-profile.json5  consumer-rules.txt  obfuscation-rules.txt  oh-package-lock.json5  oh-package.json5
storage_cache/src/main/: module.json5
storage_cache/src/main/cpp/: CMakeLists.txt  napi_init.cpp
storage_cache/src/ohosTest/: module.json5
(+243 files in other folders)
